syntax = "proto3";

package ampb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/ampb";

message AnimeMovieTag {
    int64 ID = 1;
    string tag = 2;
    google.protobuf.Timestamp createdAt = 3;
}